--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 
       <div class="row mt-5" *ngIf="employees.length == 0">
         <div class="col text-center">
-          <span class="text-secondary fs-2 fw-bold fst-italic">There are No Employees Added!</span>
+          <span class="text-secondary fs-2 fw-bold fst-italic">Aguardando os Dados!</span>
         </div>
       </div>
 
@@ -124,7 +124,7 @@
 
           <div class="row">
             <div class="col">
-              <input type="text" class="form-control" placeholder="Filiação" formControlName="company">
+              <input type="text" class="form-control" placeholder="Minha Filiação" formControlName="company">
             </div>
           </div>
 
